--- a/Bangladeš.mw
+++ b/Bangladeš.mw
@@ -11,7 +11,7 @@
 | Pind = 144.000
 | Kart = Bangladesh in its region.svg
 | Kel' = [[bengalan kel'|bengalan]]
-| Valdkundan pämez' = <!--[[Rahman Zillur|Zillur Rahman]]-->
+| Valdkundan pämez' = [[Hamid Abdul (valdkundmez')|Abdul Hamid]]
 | Päministr = [[Hasina Šeih|Šeih Hasina]]
 | Religii = [[islam]]
 | Valüt = [[bangladešan tak]]
@@ -24,7 +24,7 @@
 
 Eläjiden lugu om 142,319,000 ristitud (2011). Pind om läz 144,000 km².
 
-Päministr om [[Hasina Šeih|Šeih Hasina]].
+Prezident om [[Hamid Abdul (valdkundmez')|Abdul Hamid]] ([[2013]]. vlspäi), a päministr om [[Hasina Šeih|Šeih Hasina]].
 {{stub}}
 
 [[Kategorii:Bangladeš|*]]
