--- a/Francii.mw
+++ b/Francii.mw
@@ -1,20 +1,25 @@
 {{1000}}
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''République française'''<br />'''Francijan Tazovaldkund'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Armoiries_république_française.svg|150px|Francijan flag]]
-| align="center" width="140px" | [[Fail:Flag_of_France.svg|150px|border|Francijan valdkundznam]]
-|-
-| align="center" width="140px" | Francijan valdkundznam
-| align="center" width="140px" | Francijan flag
-|}
-|-
-| align=center colspan=2 | [[Fail:EU-France.svg|300px]]
-|}
-'''Francii''' (''Francijan Tazovaldkund, République française'') — valdkund Evropas, Keskmeren da Atlantižen valdmeren randoil, [[EÜ]]n ühtnii. Kontinentaližel Francijal oma mavaldkundröunad [[Ispanii|Ispanijanke]], [[Andorr]]anke, [[Bel'gii|Bel'gijanke]], [[Lüksemburg]]anke, [[Germanii|Germanijanke]], [[Šveicarii|Šveicarijanke]], [[Italii|Italijanke]] da [[Monako]]nke.
+{{Valdkund
+| Nimi = Francii<br />France
+| Flag = Flag of France.svg
+| Valdkundznam = Armoiries république française.svg
+| Flag text = Francijan flag
+| Valdkundznam text = Francijan valdkundznam
+| Pälidn = Pariž
+| Eläjiden lugu = 65.951.611
+| Voz' = 2013
+| Pind = 674.685
+| Kart = EU-France.svg
+| Kel' = [[francijan kel'|francijan]]
+| Valdkundan pämez' = [[Olland Fransua|Fransua Olland]]
+| Päministr = [[Ero Žan-Mark|Žan-Mark Ero]]
+| Religii = [[hristanuskond]], [[ateizm]], [[islam]]
+| Valüt = [[evro]]
+| Internet-domen = [[.fr]]
+| Telefonkod = +33
+| Aigvö = [[UTC]]+1
+}}
+'''Francii''' ('''Francijan Tazovaldkund, République française''') — valdkund Evropas, Keskmeren da Atlantižen valdmeren randoil, [[EÜ]]n ühtnii. Kontinentaližel Francijal oma mavaldkundröunad [[Ispanii|Ispanijanke]], [[Andorr]]anke, [[Bel'gii|Bel'gijanke]], [[Lüksemburg]]anke, [[Saksanma|Saksanmanke]], [[Šveicarii|Šveicarijanke]], [[Italii|Italijanke]] da [[Monako]]nke.
 
 Pälidn — [[Pariž]].</br>
 Eläjiden lugu — 64, 47 mil.</br>
