*Empty MediaWiki Message*

--- a/Francii.mw
+++ b/Francii.mw
@@ -19,7 +19,7 @@
 | Telefonkod = +33
 | Aigvö = [[UTC]]+1
 }}
-'''Francii''' ('''Francijan Tazovaldkund, République française''') — valdkund Evropas, Keskmeren da Atlantižen valdmeren randoil, [[EÜ]]n ühtnii. Kontinentaližel Francijal oma mavaldkundröunad [[Ispanii|Ispanijanke]], [[Andorr]]anke, [[Bel'gii|Bel'gijanke]], [[Lüksemburg]]anke, [[Saksanma|Saksanmanke]], [[Šveicarii|Šveicarijanke]], [[Italii|Italijanke]] da [[Monako]]nke.
+'''Francii''' ('''Francijan Tazovaldkund''', ''République française'') — valdkund Evropas, Keskmeren da Atlantižen valdmeren randoil, [[EÜ]]n ühtnii. Kontinentaližel Francijal oma mavaldkundröunad [[Ispanii|Ispanijanke]], [[Andorr]]anke, [[Bel'gii|Bel'gijanke]], [[Lüksemburg]]anke, [[Saksanma|Saksanmanke]], [[Šveicarii|Šveicarijanke]], [[Italii|Italijanke]] da [[Monako]]nke.
 
 Pälidn — [[Pariž]].</br>
 Eläjiden lugu — 64, 47 mil.</br>
