--- a/Saksanma.mw
+++ b/Saksanma.mw
@@ -1,19 +1,24 @@
 {{1000}}
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Bundesrepublik Deutschland'''<br />'''Federativine Saksanman Tazovaldkund'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Flag_of_Germany.svg|150px|Germanijan valdkundflag]]
-| align="center" width="140px" | [[Fail:Coat_of_Arms_of_Germany.svg|150px|Germanijan valdkundznam]]
-|-
-| align="center" width="140px" | Saksanman valdkundflag
-| align="center" width="140px" | Saksanman valdkundznam
-|}
-|-
-| align=center colspan=2 | [[Fail:EU-Germany.svg|300px]]
-|}
+{{Valdkund
+| Nimi = Saksanma (Germanii)<br />Deutschland
+| Flag = Flag of Germany.svg
+| Valdkundznam = Coat of Arms of Germany.svg
+| Flag text = Saksanman flag
+| Valdkundznam text = Saksanman valdkundznam
+| Pälidn = Berlin
+| Eläjiden lugu = 81.147.265
+| Voz' = 2013
+| Pind = 357.021
+| Kart = EU-Germany.svg
+| Kel' = [[saksan kel'|saksan (germanijan)]]
+| Valdkundan pämez' = [[Gauk Joahim|Joahim Gauk]]
+| Päministr = [[Merkel' Angela|Angela Merkel']]
+| Religii = [[hristanuskond]], [[ateizm]], [[islam]]
+| Valüt = [[evro]]
+| Internet-domen = [[.de]]
+| Telefonkod = +49
+| Aigvö = [[UTC]]+1
+}}
 '''Saksanma''' (''Saksanman Federacine Tazovaldkund''; [[Saksan kel'|saksan]]: ''Bundesrepublik Deutschland'') vai '''Germanii''' — valdkund Evropas, Pohjoižen meren da Baltijan meren randal. Se om [[EÜ]]n ühtnii. Saksanmal oma mavaldkundröunad [[Danii|Danijanke]], [[Alamad|Alamaidenke]], [[Bel'gii|Bel'gijanke]], [[Lüksemburg]]anke, [[Francii|Francijanke]], [[Šveicarii|Šveicarijanke]], [[Avstrii|Avstrijanke]], [[Čehanma]]nke da [[Pol'šanma]]nke.
 
 Pälidn — [[Berlin]].</br>
