*Empty MediaWiki Message*

--- a/Iran.mw
+++ b/Iran.mw
@@ -14,7 +14,7 @@
 |-
 | align=center colspan=2 | [[Fail:Iran in its region.svg|300px]]
 |}
-'''Iran''' (pers.: جمهوری اسلامی ایران‎) — valdkund [[Azii|Azijas]].
+'''Iran''' (farsi: جمهوری اسلامی ایران‎) — valdkund [[Azii|Azijas]].
 
 Eläjiden lugu — 74,2 mln.</br>
 Pind — 1 648 000 km<sup>2</sup>.
