--- a/Izrail'.mw
+++ b/Izrail'.mw
@@ -14,7 +14,7 @@
 |-
 | align=center colspan=2 | [[Fail:LocationIsrael.svg|300px]]
 |}
-'''Izrail'''' ({{Kel’+he|מְדִינַת יִשְׂרָאֵל, ''Medīnat Yisrā'el''}}; {{Lang-ar|دَوْلَة إِسْرَائِيل, ''Dawlat Isrā'īl''}}) om valdkund [[Azii|Azijas]]. [[Jerusalim]] om Izrailin pälidn.
+'''Izrail'''' ({{Kel’+he|מְדִינַת יִשְׂרָאֵל, ''Medīnat Yisrā'el''}}; {{Lang-ar|دَوْلَة إِسْرَائِيل, ''Dawlat Isrā'īl''}}) om valdkund [[Azii|Azijas]]. Sen pälidn om [[Jerusalim]].
 
 Izrailin prezident om [[Šimon Peres]].</br>
 Eläjiden lugu — 7,7 mil.</br>
