--- a/Iran.mw
+++ b/Iran.mw
@@ -1,19 +1,24 @@
 {{1000}}
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''جمهوری اسلامی ایران‎'''<br />'''Iran'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Flag of Iran.svg|150px]]
-| align="center" width="140px" | [[Fail:Coat of arms of Iran.svg|150px]]
-|-
-| align="center" width="140px" | 
-| align="center" width="140px" | 
-|}
-|-
-| align=center colspan=2 | [[Fail:Iran in its region.svg|300px]]
-|}
+{{Valdkund
+| Nimi = Iran<br />ایران‎
+| Flag = Flag of Iran.svg
+| Valdkundznam = Emblem of Iran.svg
+| Flag text = Iranan flag
+| Valdkundznam text = Iranan valdkundznam
+| Pälidn = Tehran
+| Eläjiden lugu = 77.356.669
+| Voz' = 2013
+| Pind = 1.648.195
+| Kart = Iran in its region.svg
+| Kel' = [[farsi|farsi (persijan)]]
+| Valdkundan pämez' = [[Rouhani Hassan|Hassan Rouhani]]
+| Päministr = [[Rahimi Mohammad Reza|Mohammad Reza Rahimi]]
+| Religii = [[islam]]
+| Valüt = [[iranan rial]]
+| Internet-domen = [[.ir]], [[ایران.]]
+| Telefonkod = +98
+| Aigvö = [[UTC]]+3:30
+}}
 '''Iran''' (farsi: جمهوری اسلامی ایران‎) — valdkund [[Azii|Azijas]].
 
 Eläjiden lugu — 74,2 mln.</br>
