--- a/Tullei.mw
+++ b/Tullei.mw
@@ -2,7 +2,7 @@
 [[Fail:Blowing in the Wind (4211447682).jpg|thumb|right|250px|Tullein aigan]]
 '''Tullei''' om erazvuiččiden [[gaz]]oiden valuiden likund, putub [[atmosfer]]as gorizontaližhe čuradushe. [[Ma]]s se om [[il'm]]an valud.
 
-Tulleid erineda vägen mödhe: [[briz]]aspäi [[uragan]]ahesai. Kaikenaigaižed kovad tulleid voidas veda surmičijahesai valatoitusehesai [[ümbrišt]]ole ([[erozii (geologii)|erozijad]] i m. e.).
+Tulleid erinese vägen mödhe: [[briz]]aspäi [[uragan]]ahasai. Kaikenaigaižed kovad tulleid voidas veda surmičijahesai valatoitusehesai [[ümbrišt]]ole ([[erozii (geologii)|erozijad]] i m. e.).
 {{stub}}
 {{sä}}
 
