--- a/Rajan_Petti.mw
+++ b/Rajan_Petti.mw
@@ -1,6 +1,6 @@
 '''Petti (Bridžit) Rajan''' ([[anglijan kel'|angl.]]: ''Patty (Brigit) Ryan'') om [[Saksanma|saksalaine]] [[evrodisko]]pajatai.
 
-Hän linni tetabaks 80-židen voziš jäl'ges «You're My Love, You're My Life»-singlan pästandad. Toižed populärižed pajod oma «Love is the Name of the Game», «Stay with Me Tonight» da «I Don't Wanna Lose You Tonight». Debütine al'bom, «Love is the Name of the Game», oli populärine [[Kitai|Kitajas]] da [[Japonii|Japonijas]].
+Hän linni tetabaks 80-žiš voziš jäl'ges «You're My Love, You're My Life»-singlan pästandad. Toižed populärižed pajod oma «Love is the Name of the Game», «Stay with Me Tonight» da «I Don't Wanna Lose You Tonight». Debütine al'bom, «Love is the Name of the Game», oli populärine [[Kitai|Kitajas]] da [[Japonii|Japonijas]].
 
 Žalleičendaks, hänen hoštuz oli lühüdaigaine, i nügüd' hän (kut äjad [[disko]]ezitajad-ki) ezineb i om satuz eduzližikš [[Venäma]]s.
 
