--- a/Rajan_Petti.mw
+++ b/Rajan_Petti.mw
@@ -1,6 +1,6 @@
 '''Petti (Bridžit) Rajan''' ([[anglijan kel'|angl.]]: ''Patty (Brigit) Ryan'') om [[Saksanma|saksalaine]] [[evrodisko]]pajatai.
 
-Hän linni tetabaks 80-žiš voziš jäl'ges «You're My Love, You're My Life»-singlan pästandad. Toižed populärižed pajod oma «Love is the Name of the Game», «Stay with Me Tonight» da «I Don't Wanna Lose You Tonight». Debütine al'bom, «Love is the Name of the Game», oli populärine [[Kitai|Kitajas]] da [[Japonii|Japonijas]].
+Hän linni tetabaks 80-žiš voziš jäl'ges «You're My Love, You're My Life»-singlan pästandad. Toižed populärižed pajod oma «Love is the Name of the Game», «Stay with Me Tonight» da «I Don't Wanna Loose You Tonight». Debütine al'bom, «Love is the Name of the Game», oli populärine [[Kitai|Kitajas]] da [[Japonii|Japonijas]].
 
 Žalleičendaks, hänen hoštuz oli lühüdaigaine, i nügüd' hän (kut äjad [[disko]]ezitajad-ki) ezineb i om satuz eduzližikš [[Venäma]]s.
 
@@ -11,9 +11,10 @@ Hän linni tetabaks 80-žiš voziš jäl'ges «You're My Love, You're My Life»-
 * ''Top of The Line'' (1989)
 
 === Singlad ===
-* ''You're My Love, You're My Life'' (1986)
 * ''Stay With Me Tonight'' (1986)
-* ''I Don't Wanna Lose You Tonight'' (1987)
+* ''You're My Love, You're My Life'' (1986)
+* ''I Don't Wanna Loose You Tonight'' (1987)
+* ''Since You Came Into My Life'' (1989)
 * ''You're My Love, You're My Life '98'' (1998)
 * ''Das Matterhorn'' (2003)
 * ''Lay Love on You'' (2003)
