/* Kompiläcijad */ ещё компиляция

--- a/Rajan_Petti.mw
+++ b/Rajan_Petti.mw
@@ -25,6 +25,7 @@ Hän linni tetabaks 80-žiš voziš jäl'ges «You're My Love, You're My Life»-
 * ''Time to Say Goodbye'' (2005)
 
 === Kompiläcijad ===
+* ''Disco Collection'' (2001)
 * ''All The Best'' (2006)
 
 == Irdkosketused ==
