*Empty MediaWiki Message*

--- a/Amsterdam.mw
+++ b/Amsterdam.mw
@@ -3,7 +3,7 @@
  | Nimi = Amsterdam
  | Lidnanznam = Amsterdam.svg
  | Flag = Flag of Amsterdam.svg
- | Lidnanznam text = Amsterdaman znam
+ | Lidnanznam text = Amsterdaman lidnanznam
  | Flag text = Amsterdaman flag
  | Valdkund = Alamad
  | Eläjiden lugu = 790,044
