"kut ajada" - это в Викигид

--- a/Afinad.mw
+++ b/Afinad.mw
@@ -1,32 +1,26 @@
 {{1000}}
-{| class="infobox bordered" align=right cellpadding=4 cellspacing=0 width=275 style="clear:right; margin: 0 0 1em 1em; background: #f9f9f9;  font-size: 95%;"
-|-
-|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Afinad'''</big>
-|-
-| align="center" | [[Fail:Flag of Athens.JPG|100px]]
-| align="center" | [[Fail:Flag of Athens.JPG|125px]]
-|-
-| align="center" | 
-| align="center" | 
-<br /><small></small>
-|-
-|Eläjiden lugu|| 745 500
-|-
-|Pind|| 412 km²
-|-
-|Mer|| 
-|}
-'''Afinad''' (grec.: Αθήνα) om [[Grekanma]]n pälidn.
+{{Eländpunkt
+ | Nimi = Afinad<br />Αθήνα
+ | Lidnanznam = Amsterdam.svg
+ | Flag = 
+ | Lidnanznam text = Amsterdaman znam
+ | Flag text = Amsterdaman flag
+ | Valdkund = Alamad
+ | Eläjiden lugu = 790,044
+ | Voz' = 2012
+ | Pind = 219
+ | Fail = ZuidasAmsterdamNederland2011.jpg
+ | Pämez' = [[Van der Lan Eberhard|Eberhard van der Lan]]
+ | Telefonkod = +31-020
+ | Aigvö = [[UTC]]+1
+}}
+'''Afinad''' ([[grekan kel'|grek.]]: ''Αθήνα'') om [[Grekanma]]n pälidn.
 
 == Istorii ==
 
 == Politine sistem ==
 
 == Geografijan andmused ==
-
-== Kut ajada ==
-* Lendimport Elefterios Venizelos (grec.:Ελευθέριος Βενιζέλος)
-* Kundaline transport: [[Afinan metropoliten|metropoliten]], [[Tramvai|tramvajad]], [[Trolleibus|trolleibusad]], [[Avtobus|avtobusad]].
 
 == Eläjad ==
 
