*Empty MediaWiki Message*

--- a/Afinad.mw
+++ b/Afinad.mw
@@ -1,18 +1,18 @@
 {{1000}}
 {{Eländpunkt
  | Nimi = Afinad<br />Αθήνα
- | Lidnanznam = Amsterdam.svg
+ | Lidnanznam = 
  | Flag = 
- | Lidnanznam text = Amsterdaman znam
- | Flag text = Amsterdaman flag
- | Valdkund = Alamad
+ | Lidnanznam text = Afinoiden lidnanznam
+ | Flag text = 
+ | Valdkund = Grekanma
  | Eläjiden lugu = 790,044
  | Voz' = 2012
  | Pind = 219
- | Fail = ZuidasAmsterdamNederland2011.jpg
- | Pämez' = [[Van der Lan Eberhard|Eberhard van der Lan]]
+ | Fail = Athens - Mount Lycabettus - 20080729a.jpg
+ | Pämez' = [[Kaminis Giorgios|Giorgios Kaminis]]
  | Telefonkod = +31-020
- | Aigvö = [[UTC]]+1
+ | Aigvö = [[UTC]]+2
 }}
 '''Afinad''' ([[grekan kel'|grek.]]: ''Αθήνα'') om [[Grekanma]]n pälidn.
 
