*Empty MediaWiki Message*

--- a/Korsik.mw
+++ b/Korsik.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Korsika'''</big></big>
+|+<big><big>'''Korsik'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
@@ -16,23 +16,7 @@
 |Pind|| 8 680 km²
 |}
 
-'''Korsika''' ([[Francijan kel'|francijan kelel]]: ''Corse'', [[Korsikan kel'|korsikan kelel]]: ''Corsica'') om [[Francii|Francijan]] sar' da agj (''région''). Korsikan pälidn om Ajaččo. 
-
-== Kut ajada ==
-* Korsika om 4 aeroportad:
-** Ajaččo (fr: Aéroport d'Ajaccio Napoléon Bonaparte)
-** Basria (Aéroport de Bastia Poretta)
-** Kalvi (Aéroport de Calvi-Sainte-Catherine)
-** Figari (Aéroport de Figari Sud Corse)
-
-* Korsikan raudted (Chemins de fer de Corse)
-** Pird Bastia - Ajaččo (158 km)
-** Pird Ponte-Leččia - Kalvi (74 km)
-
-
-== Kul'tur ==
-* '''Keled''': francijan kel' da korsikan kel'
-
+'''Korsika''' ([[Francijan kel'|francijan kelel]]: ''Corse'', [[Korsikan dialekt|korsikan dialektal]]: ''Corsica'') om [[Francii|Francijan]] sar' da region. Korsikan pälidn om [[Ajaččo]].
 {{stub}}
 
-[[Kategorii:Geografii]]
+[[Kategorii:Francii]]
