--- a/Petroskoi.mw
+++ b/Petroskoi.mw
@@ -26,10 +26,10 @@ Suren Kodimaižen sodan (voinan) aigan suomalaine Karjalan armii anasti Karjalan
 
 1944 vodel Rusked Armii anasti Petroskoin tagaze.
 
-== Geografii (Mantedo) ==
+== Geografii ==
 Mantedokoordinatad om 61 gradusad 47 minutad pohjošt levedut i 34 gradusad 36 minutad päivnouzmpolišt pidust.
 
-Petroskoi om [[Änine|Änižen]] randal (Petroskoin laht). Petroskoiš om järvid ([[Änine]], Logmozero /Logmär/), Četir'ohv'orstnoje, Lamba, Karjer) da jogid (Lososinka, Neglinka, Tomica, Studenec, Kamennij). Ümbri lidnas om äi mecoid da puištoid. Petroskoin pohjoižpalas om PetrVU:n botanine puišt da peizažine «Zaozerskij»-kel'dtaho. Lososinkanno oma Kul'turan da Lebun puišt, Änižen traktortegimen puišt da NÜKP:n XXII suiman puišt. Neglinkanno om Pionerižen organizacijan puišt. 
+Petroskoi om [[Änine|Änižen]] randal (Petroskoin laht). Petroskoiš om järvid ([[Änine]], Logmozero /Logmär/), Četir'ohv'orstnoje, Lamb, Karjer) da jogid (Lososink, Neglink, Tomic, Studenec, Kamennii). Ümbri lidnas om äi mecoid da puištoid. Petroskoin pohjoižpalas om PetrVU:n botanine puišt da peizažine «Zaozerskii»-kel'dtaho. Lososinkanno oma Kul'turan da Lebun puišt, Änižen traktortegimen puišt da NÜKP:n XXII suiman puišt. Neglinkanno om Pionerižen organizacijan puišt. 
 
 Kaikiš korktamb čokkoim lidnas — Kukaz (Kukkovk) (293 m).
 
