--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -3,14 +3,14 @@
  | Logo = 
  | Foto = 
  | Žanrad = [[evrodens]], [[hausmuzik|haus]]
- | Voded = 1997—2005
+ | Voded = 1997—2005, 2013—...
  | Valdkund = Saksanma
  | Lidn = Hamburg
  | Kel' = [[anglijan kel'|anglijan]], [[ispanijan kel'|ispanijan]]
  | Leiblad = 
  | Toižed projektad = [[Team 33]]
  | Mülükund = 
- | Eksühtnijad = [[Hebel' Žozefine|Žozefine Hebel']], Ambrogio Krotti, [[Rodriges Luis|Luis Rodriges Salasar]], David Granados Lasera, Terri Bjerre, Melani Mollinus, Pjerro Brunneti
+ | Eksühtnijad = [[Lian Ross|Žozefine Hebel']], Ambrogio Krotti, [[Rodriges Luis|Luis Rodriges Salasar]], David Granados Lasera, Terri Bjerre, Melani Mollinus, Pjerro Brunneti
  | Sait = 
 }}
 '''«2 Eivissa»''' oli [[Saksanma|saksalaine]] evrodensgrupp [[Hamburg]]aspäi, [[1997]]. vlpäi [[2005]]. vhesai.
