*Empty MediaWiki Message*

--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -3,7 +3,7 @@
  | Logo = 
  | Foto = 
  | Žanrad = [[evrodens]], [[hausmuzik|haus]]
- | Voded = 1997—2005, 2013—...
+ | Voded = 1997—2005,<br /> 2013—...
  | Valdkund = Saksanma
  | Lidn = Hamburg
  | Kel' = [[anglijan kel'|anglijan]], [[ispanijan kel'|ispanijan]]
