*Empty MediaWiki Message*

--- a/Vihm.mw
+++ b/Vihm.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:22 Regen ubt.jpeg|thumb|right|275px|Vihm]]
-'''Vihm''' om [[atmosferižed nägused]], kudambad langetas [[pil'v]]išpäi nozoluden tippuiden formal.
+'''Vihm''' om [[atmosferižed sadeged]], kudambad langetas [[pil'v]]išpäi nozoluden tippuiden formal.
 
 {{Sä}}
 {{stub}}
