--- a/Sumeg.mw
+++ b/Sumeg.mw
@@ -1,5 +1,5 @@
 [[Fail:Boulevard on Lenina Avenue in Barnaul.jpg|thumb|right|285px|Sumeg [[Barnaul]]as]]
-'''Sumeg''' om [[atmosferižed nägused|atmosferine näguz]], [[vezi|veden]] äjüz [[il'm]]as, konz tegese vezipurun kondensacijan mučuižed produktad.
+'''Sumeg''' om [[atmosferižed nägused|atmosferine näguz]], [[vezi|veden]] äjüz [[il'm]]as, konz tegese [[vezipuru]]n kondensacijan mučuižed produktad.
 
 {{sä}}
 {{stub}}
