--- a/Ac_(jogi).mw
+++ b/Ac_(jogi).mw
@@ -1,9 +1,7 @@
 {{tärtused|Ac}}
-'''Ac''' ([[venäkel'|ven.]]: ''Аца'') om jogi [[Venämas]], [[Baikalantagaine rand|Baikalantagaižes randas]]. Om [[Čikoi (jogi)|Čikoi]]-jogen päližajogi, [[Jenisei]]-jogen basseinan pala.
+'''Ac''' ([[venäkel'|ven.]]: ''Аца'') om jogi [[Venäma]]s, [[Baikalantagaine rand|Baikalantagaižes randas]]. Om [[Čikoi (jogi)|Čikoi]]-jogen päližajogi, [[Jenisei]]-jogen basseinan pala.
 
 Piduz om läz 85 kilometrad, basseinan pird — 2150 km<sup>2</sup>.
 {{stub}}
 
 [[Kategorii:Joged kirjamišton mödhe]]
-
-[[fr:Atsa]]
