*Empty MediaWiki Message*

--- a/Beinbridž_(Džordžii).mw
+++ b/Beinbridž_(Džordžii).mw
@@ -18,7 +18,7 @@
 Pind om läz 49 km². Beinbridžan eläjiden lugu oli 12,697 ristitud 2010-žes vodes.
 {{stub}}
 
-[[Kategorii:AÜV:oin lidnad]]
+[[Kategorii:Amerikan Ühtenzoittud Valdkundoiden lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[fr:Bainbridge (Géorgie)]]
