не сингл (пересматривала) + чарты (на всякий случай)

--- a/Mišel'_(pajatai).mw
+++ b/Mišel'_(pajatai).mw
@@ -7,9 +7,11 @@ Venämas Mišel' tetab mugažo ühthižtön [[Rudenko Leonid|DJ Leonidanke Ruden
 == Diskografii ==
 
 === Singlad ===
-* ''Only You (feat. [[Ropča Andrei|Randi]])'' (2011)
-* ''What If (feat. Randi)'' (2011)
-* ''It Feels So Good'' (2012)
+* ''Only You (feat. [[Ropča Andrei|Randi]])'' (2011) — RUS #8, EUR #98<ref>http://top40-charts.com/song.php?sid=31937</ref>
+* ''It Feels So Good'' (2012) — RUS #17<ref>http://top40-charts.com/song.php?sid=33777</ref>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.hahahaproduction.com/ro/production/mishelle/biography Mišel' «HaHaHa Production»-leiblan saital]
