*Empty MediaWiki Message*

--- a/Kobencl'_Lüdvig_fon.mw
+++ b/Kobencl'_Lüdvig_fon.mw
@@ -1,4 +1,4 @@
-'''Iogann Lüdvig Jozef fon Kobencl'''' ([[saksan kel'|saks.]]: ''Johann Ludwig Joseph von Cobenzl''; sünd. [[21. kül'mku]] [[1753]], [[Brüssel']], [[Suvialamad]], [[Pühä Saksalaiž-rimalaine imperii]] — kol. [[23. uhoku]] [[1809]], [[Ven]], [[Avstrijan imperii]]) oli avstrijalaine diplomat da valdkundmez'. Mülüi [[Kobenclid]]-heimhe.
+'''Iogann Lüdvig Jozef fon Kobencl'''' ([[saksan kel'|saks.]]: ''Johann Ludwig Joseph von Cobenzl''; sünd. [[21. kül'mku]] [[1753]], [[Brüssel']], [[Suvialamad]], [[Pühä Saksalaiž-rimalaine imperii]] — kol. [[23. uhoku]] [[1809]], [[Ven]], [[Avstrijan imperii]]) oli avstrijalaine diplomat da valdkundmez'. Mülüi [[Kobenclid]]-heimho.
 
 Oli sur'oigenu [[Venäman imperii|Venäman imperijas]] vlspäi [[1784]] vhesai [[1800]]. [[1800]]-žes vodes linni ezmäižeks röunantagaižiden azjoiden ministraks.
 {{stub}}
