*Empty MediaWiki Message*

--- a/Podporožj.mw
+++ b/Podporožj.mw
@@ -1,4 +1,4 @@
-'''Podporožje''' (ven.: ''Подпорожье'') om [[lidn]] [[Leningradan agj]]as [[Podporožjen rajon]]as.
+'''Kos'kenaluine''' (ven.: ''Подпорожье'') om [[lidn]] [[Leningradan agj]]as [[Podporožjen rajon]]as.
 
 == Istorii ==
 
@@ -14,4 +14,4 @@
 
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
-[[Kategorii:Podporožjen rajon]]
+[[Kategorii:Kos’kenaluižen rajon]]
