*Empty MediaWiki Message*

--- a/Kos'kenaluižen_rajon.mw
+++ b/Kos'kenaluižen_rajon.mw
@@ -1,18 +1,18 @@
 {{Rajon
-| Nimi          = Podporožjen rajon
+| Nimi          = Kos'kenaluižen rajon
 | Znam          = Coat of Arms of Podporozhsky rayon (Leningrad oblast).png
 | Flag          = Flag of Podporozhsky rayon (Leningrad oblast).png
 | Znam text     =
 | Flag text     =
 | Valdkund      = Venäma
-| Pälidn        = Podporožje
+| Pälidn        = Kos'kenaluine
 | Eläjiden lugu = 33500
 | Year          = 2006
 | Pind          = 7830
 | Map           = Ru-len-podporozhsky loc.svg
 | Map width     = 
 }}
-'''Podporožjen rajon''' (ven.: ''Подпорожский район'') om [[rajon]] [[Leningradan agj]]as.
+'''Kos'kenaluižen rajon''' (ven.: ''Подпорожский район'') om [[rajon]] [[Leningradan agj]]as.
 
 == Istorii ==
 
