--- a/Järved_(külä).mw
+++ b/Järved_(külä).mw
@@ -1,4 +1,4 @@
-'''Järved''' (''Jarvenkülä'') — om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
+'''Järved''' (''Jarvenkülä'') — om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Kos'kenaluižen rajon|Kos'kenaluižen rajonas]].
 
 {{DEFAULTSORT:Järved}}
 
