--- a/Ladv_(Leningradan_agj).mw
+++ b/Ladv_(Leningradan_agj).mw
@@ -1,4 +1,6 @@
-'''Ladv''' ([[Venäkel'|ven.]] ''Ладва'') om vepsän [[külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]]. Küläs om üks’ parembišpäi vepsän rahvahan muzejoišpäi (sen tegii — istorik N. Finčenko). Ladv om vepsän runokirjutajan [[Nikolai Abramov|N. Abramovan]] kodikülä.
+'''Ladv''' ([[Venäkel'|ven.]] ''Ладва'') om vepsän [[külä]] [[Leningradan agj|Leningradan agjan]] [[Kos'kenaluižen rajon|Kos'kenaluižen rajonas]].
+
+Küläs om üks' parembišpäi vepsän rahvahan muzejoišpäi (sen tegii — istorik N. Finčenko). Ladv om vepsän runokirjutajan [[Nikolai Abramov|N. Abramovan]] kodikülä.
 
 Ladvas om läz 150 eläjad.
 
