--- a/Nemž.mw
+++ b/Nemž.mw
@@ -1,4 +1,4 @@
-'''Nemž''' om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
+'''Nemž''' om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Kos'kenaluižen rajon|Kos'kenaluižen rajonas]].
 
 {{Vepsän küläd Leningradan agjan Podporožjen rajonas}}
 {{stub}}
