*Empty MediaWiki Message*

--- a/Kurb.mw
+++ b/Kurb.mw
@@ -1,5 +1,5 @@
 [[Fail:Kurb1.jpg|pisi|250px|Vepsän muzei Kurbas]]
-'''Kurb''' om vepsän žilo [[Leningradan agj]]as, [[Podporožjen rajon]]as. Se mülüb [[Vingl]]an küläkundha. Eläjiden lugu - 362 r. (2007)
+'''Kurb''' om vepsän žilo [[Leningradan agj]]as, [[Kos'kenaluižen rajon]]as. Se mülüb [[Vingl]]an küläkundha. Eläjiden lugu - 362 r. (2007)
 
 Žilo seižub [[Ojat' (jogi)|Ojat'jogen]] randal. Matk rajonankeskushesai om 111 km. Mante veb Kurbaspäi [[Vingl]]aha, sidme kävub avtobus № 421.
 
