*Empty MediaWiki Message*

--- a/Kodajärv.mw
+++ b/Kodajärv.mw
@@ -1,4 +1,4 @@
-'''Kodajärv''' om järv [[Leningradan agj]]as, [[Podporožjen rajon]]as, lähen kolnut [[Karhil]]-küläd.
+'''Kodajärv''' om järv [[Leningradan agj]]as, [[Kos'kenaluižen rajon]]as, lähen kolnut [[Karhil]]-küläd.
 
 {{stub}}
 [[Kategorii:Järved kirjamišton mödhe]]
