*Empty MediaWiki Message*

--- a/Kekar'v_(järv).mw
+++ b/Kekar'v_(järv).mw
@@ -1,4 +1,4 @@
-'''Kekar'v''' om järv [[Leningradan agj]]as, [[Kos'kenaluižes rajon]]as. Sen randal seižui kolnu [[Kekar'v (külä)|Kekar'v]]-külä.
+'''Kekar'v''' om järv [[Leningradan agj]]as, [[Kos'kenaluižen rajon]]as. Sen randal seižui kolnu [[Kekar'v (külä)|Kekar'v]]-külä.
 
 {{stub}}
 [[Kategorii:Järved kirjamišton mödhe]]
