--- a/Kekar'v_(külä).mw
+++ b/Kekar'v_(külä).mw
@@ -1,5 +1,5 @@
 [[Fail:Kekar'v1.jpg|pisi|250px|Muretud kül'bet Kekar'ves]]
-'''Kekar'v''' oli vepsän külä [[Leningradan agj]]as, [[Kos'kenaluižes rajon]]as.
+'''Kekar'v''' oli vepsän külä [[Leningradan agj]]as, [[Kos'kenaluižen rajon]]as.
 
 Külä seižui [[Kekar'v]]-järven randal. Nügüd' sen tahol niken ei elä jo.
 
