--- a/Ojajärv.mw
+++ b/Ojajärv.mw
@@ -1,4 +1,4 @@
-'''Ojajärv''' om järv [[Leningradan agj]]as, [[Podporožjen rajon]]as, lähen kolnut [[Karhil]]-küläd.
+'''Ojajärv''' om järv [[Leningradan agj]]as, [[Kos'kenaluižen rajon]]as, lähen kolnut [[Karhil]]-küläd.
 
 {{stub}}
 [[Kategorii:Järved kirjamišton mödhe]]
