--- a/Lehmjärv.mw
+++ b/Lehmjärv.mw
@@ -1,4 +1,4 @@
-'''Lehmjärv (Lehmärv)''' om järv [[Leningradan agj]]as, [[Podporožjen rajon]]as, lähen kolnut [[Karhil]]-küläd.
+'''Lehmjärv (Lehmärv)''' om järv [[Leningradan agj]]as, [[Kos'kenaluižen rajon]]as, lähen kolnut [[Karhil]]-küläd.
 
 {{stub}}
 [[Kategorii:Järved kirjamišton mödhe]]
