*Empty MediaWiki Message*

--- a/Karhil.mw
+++ b/Karhil.mw
@@ -1,5 +1,5 @@
 [[Fail:Jumalanpert'_Karhilas.jpg|pisi|250px|Muretud jumalanpert' Karhilas]]
-'''Karhil''' ([[Venäkel'|ven.]] ''Каргиничи'') oli vepsän külä [[Leningradan agj]]as, [[Podporožjen rajon]]as.
+'''Karhil''' ([[Venäkel'|ven.]] ''Каргиничи'') oli vepsän külä [[Leningradan agj]]as, [[Kos'kenaluižen rajon]]as.
 
 Külä seižui Karhilanjärven randal. Nügüd' sen tahol niken ei elä jo. Erasiden andmusiden mödhe [http://one-half-3544.livejournal.com/78818.html], külän pohjoižpoles, [[Lepjärv]]enno, om üks' pert, kus elädas ristitud.
 
