--- a/Vingl.mw
+++ b/Vingl.mw
@@ -1,7 +1,7 @@
-'''Vingl''' (''Vidl'', [[Venäkel'|ven.]]: ''Винницы'') om vanh [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
+'''Vingl''' (''Vidl'', [[Venäkel'|ven.]]: ''Винницы'') om vanh [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Kos'kenaluižen rajon|Kos'kenaluižen rajonas]].
 
 == Eläjad ==
-Vinglas om äi [[vepsläižed|vepsläižid]]. Vepsäižiden lugun mödhe nece žilo lidiruib [[Leningradan agj]]as.
+Vinglas elädas äi [[vepsläižed|vepsläižid]]. Vepsäižiden lugun mödhe nece žilo lidiruib [[Leningradan agj]]as.
 
 {{DEFAULTSORT:Vingl}}
 {{Vepsän küläd Leningradan agjan Podporožjen rajonas}}
