*Empty MediaWiki Message*

--- a/Vil'häl.mw
+++ b/Vil'häl.mw
@@ -1,4 +1,4 @@
-'''Vil'häl''' ([[Venäkel'|venäkelel]]: ''Ярославичи'' /''Jaroslaviči''/) om [[Vepsläižed|vepsän]] [[Külä|külä]] [[Leningradan agj]]as, [[Podporožjen rajon|Podporožjen rajonas]]. Sen sijaduz om [[Vingl|Vinglan]] küläkundas, [[Ojat' (jogi)|Ojat'jogen]] randal. Vil'hälan eläjiden lugu om 216 mest.
+'''Vil'häl''' ([[Venäkel'|venäkelel]]: ''Ярославичи'' /''Jaroslaviči''/) om [[Vepsläižed|vepsän]] [[Külä|külä]] [[Leningradan agj]]as, [[Kos'kenaluižen rajon|Kos'kenaluižen rajonas]]. Sen sijaduz om [[Vingl|Vinglan]] küläkundas, [[Ojat' (jogi)|Ojat'jogen]] randal. Vil'hälan eläjiden lugu om 216 mest.
 
 Vil'hälas oma küläkirjišt, fel'dšeriž-akušerine punkt da kul'turkodi. 2009 vodhesai oli keskškol.
 
