*Empty MediaWiki Message*

--- a/Kall'_(külä).mw
+++ b/Kall'_(külä).mw
@@ -14,11 +14,11 @@
  | Aigvö = [[UTC]]+4
 }}
 [[Fail:Щелейки.Дмитриевская церковь.jpg|thumb|left|250px|Sijaline jumalainpert'. Vn 1985 foto, restavracijan aigan.]]
-'''Kall'''' ([[venäkel'|ven.]]: ''Щелейки'') om pen' [[Vepsänma|vepsän]] külä [[Leningradan agj]]an [[Kos'kenaluižen rajon‎|Kos'kenaluižen (Podporožjen) rajonas]]. Se om oiktan [[Süvär'|Süvären]] randan südäimes, läz [[Anine|Anižespäi]].
+'''Kall'''' ([[venäkel'|ven.]]: ''Щелейки'') om pen' [[Vepsänma|vepsän]] külä [[Leningradan agj]]an [[Kos'kenaluižen rajon‎|Kos'kenaluižen (Podporožjen) rajonas]]. Se om oiktan [[Süvär'|Süvären]] randan südäimes, läz [[Änine|Äništ]].
 
-Külän eläjiden lugu oli 35 ristitud 2007-žes vodes, enambuz heišpäi — etnižed [[vepsläižed]] (19. voz'sadan lopindal kaik eläjad oli vepsän augotižlibund).
+Külän eläjiden lugu oli 35 ristitud 2007-žes vodes, enambuz heišpäi — etnižed [[vepsläižed]] (19. voz'sadan lopindal kaikil eläjil oli vepsän augotižlibund).
 
-Kall'os om [[Dmitrii Solunin|ph. Dmitrijan]] jumalanpert', kudamb om saudud vl [[1783]]. Külä sai ičeze vepsän nimt järgeližetoman kall'sel'gan tagapäi läheli eländpunktad, kudamb om atipine reljef sen tahondale. Se om 1,4. kilometroiden pitte, i om pordhan korktuz 50 metroihesai. Nece kall'sel'g om [[Venäman eriline varatud londuzterritorii]].
+Kall'os om [[Dmitrii Solunin|ph. Dmitrijan]] jumalanpert', kudamb om saudud vl [[1783]]. Külä sai ičeze vepsän nimen järgeližetoman kall'sel'gan tagapäi läheli eländpunktad, kudamb om atipine reljef sile tahondale. Se om 1,4. kilometroiden pitte, i om pordhan korktuz 50 metroihesai. Nece kall'sel'g om [[Venäman eriline varatud londuzterritorii]].
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
