*Empty MediaWiki Message*

--- a/Hala.mw
+++ b/Hala.mw
@@ -1,5 +1,5 @@
 [[Fail:Bäume mit Raureif.JPG|thumb|right|275px|Hala puiš]]
-'''Hala''' om koviden [[Atmosferižed sadeged|atmosferižiden sadegiden]] erik. Nece om kristalližen [[jä]]n hoik šoid, kudamb katab man i kaluiden pindad mahusen negativižen lämusen, vähäpil'vekahan taivhan i venon tullein aigan.
+'''Hala''' om koviden [[Atmosferižed sadeged|atmosferižiden sadegiden]] erik. Nece om kristalližen [[jä]]n hoik šoid, kudamb katab man i kaluiden pindad mahusen negativižen lämusen, vähäpil'vekahan {{k|малооблачного}} taivhan i venon tullein aigan.
 
 {{sä}}
 {{stub}}
