*Empty MediaWiki Message*

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -1,11 +1,13 @@
-[[File:MIBC 11th May, 2013.jpg|thumb|right|300px|Moskv-Siti]]
-[[File:Москва-Сити ночью.jpg|thumb|right|300px|Moskv-Siti öl]]
-'''Moskv-Siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as, [[Presnin randird]]al. Se linneb azjaližen aktivižusen zonaks; nügüd' om sauvomižen stadijas. Saudud vlspäi [[1995]] vhesai [[2017]].
+[[File:MIBC 11th May, 2013.jpg|thumb|left|300px|Moskv-Siti]]
+[[File:Москва-Сити ночью.jpg|thumb|right|360px|Moskv-Siti öl]]
+
+'''Moskv-Siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as, [[Presnin randird]]al. Se linneb azjaližen aktivižusen zonaks; nügüd' om sauvomižen stadijas. Saudud vlspäi 1995 vhesai 2017.
 
 Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 
 == Objektad ==
-[[Fail:Moskva city.svg|thumb|left|500px|Moskv-Sitin plan]]
+[[Fail:Moskva city.svg|thumb|center|450px|Moskv-Sitin plan]]
+
 {| class="table sortable" style="width:100%;"
 |-
 |bgcolor="bbffbb" width="90px" | Tehtud (saudud)
@@ -17,6 +19,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 |}
 
 === Tarhoiden tablut ===
+
 {| class="table sortable" style="width:100%;"
 |- style="text-align:center; white-space:nowrap;" bgcolor="BBBBBB"
 ! №
@@ -213,6 +216,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 |}
 
 ===  Pil'venmurendajiden tablut ===
+
 {| class="table sortable" style="width:100%;"
 |- style="text-align:center; white-space:nowrap;" bgcolor="BBBBBB"
 ! №
@@ -447,6 +451,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 |}
 
 === Tühjitud projektad ===
+
 {| class="table sortable" style="width:100%;"
 |- style="text-align:center; white-space:nowrap;" bgcolor="BBBBBB"
 ! №
@@ -486,6 +491,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 |}
 
 == Homaičendad ==
+
 {{Reflist}}
 
 {{stub}}
