*Empty MediaWiki Message*

--- a/Kičoja.mw
+++ b/Kičoja.mw
@@ -17,7 +17,7 @@
 
 Ezmäine kirjutamine Kičojan polhe datiruitud vn 1563. Mülüi Skobelicinad-pomeščikoihe edelespäi.
 
-Vnno 2007 küläs eli vaiše üks' kaikenaigaine eläi (mez', i hän om [[vepsläižed|vepsläine]]); hot' dačnikad ajadas sigä kezan aigan. Pidab sanuda, miše Kičojas ei nikonz olend äjid rahvast, ezikät, sen kožutoman sijadusen tagapäi: ühtenzoituz mail'manke putub vaiše päliči [[Ojat' (jogi)|Ojat'-joges]], ei ole hüväd jaugnikted. Eländpunktas om üks'jäine ird — Jogentagaine (''Заречная'').
+Vnno 2007 küläs eli vaiše üks' kaikenaigaine eläi (mez', i hän om [[vepsläižed|vepsläine]]); hot' dačnikad ajadas tänna kezan aigan. Pidab sanuda, miše Kičojas ei nikonz olend äjid rahvast, ezikät, sen kožutoman sijadusen tagapäi: ühtenzoituz mail'manke putub vaiše päliči [[Ojat' (jogi)|Ojat'-joges]], ei ole hüväd jaugnikted. Eländpunktas om üks'jäine ird — Jogentagaine (''Заречная'').
 
 Pämel'heižtaho — pen' [[Nikolai-Čudtegii|ph. Nikolajan-Čudtegijan]] kivičasoun.
 {{stub}}
