*Empty MediaWiki Message*

--- a/Sur'_Britanii.mw
+++ b/Sur'_Britanii.mw
@@ -14,7 +14,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-United Kingdom.svg|300px]]
 |}
-'''Sur' Britanii''' ('''Suren Britanijan da Pohjoižen Irlandijan Ühtenzoittud kunigahuz''', anglijan kelel: ''United Kingdom of Great Britain and Northern Ireland'') om sar'hine valdkund Paivlaskmpol'žes Evropas. Ohjandusen form — Parlamentine monarhii. Pälidn om [[London]]. [[EÜ|Evropan Ühtištusen]] ühtnii
+'''Sur' Britanii''' ('''Suren Britanijan da Pohjoižen Irlandijan Ühtenzoittud kunigahuz''', anglijan kelel: ''United Kingdom of Great Britain and Northern Ireland'') om sar'hine valdkund Paivlaskmpol'žes Evropas. Ohjandusen form — Parlamentine monarhii. Pälidn om [[London]]. [[EÜ|Evropan Ühtištusen]] ühtnii.
  
 Valdukundan sijaduz om Britanijan saril (Suren Britanijan sarel, Irlandijan saren pohjoižpäivnouzmpol'ne palal, Normandijan saril), Atlantižen valdmeren randal. Pind om 244 820 km<sup>2</sup>. Kaikiš korktamb čokkoim om Ben-Nevis mägi (1343 m) Šotlandijas. Kaikiš alahaižemb čokkoim om Fenland (-4 m).
 
