*Empty MediaWiki Message*

--- a/Baltika_(oludenkeituden_kompanii).mw
+++ b/Baltika_(oludenkeituden_kompanii).mw
@@ -1,5 +1,5 @@
 [[Fail:Baltika Barry Kent.jpg|thumb|right|275px|«Baltik»-kompanijan produkcii laukas]]
-'''Oludenkeituden kompanii «Baltik»''' ([[Venäkel'|ven.]] ''Пивоваренная компания «Балтика»'') om kaikiš suremb [[Venäma|venälaine]] [[olud|oludenkeituden]] kompanii. Štab-kvartir om [[Piter]]iš.
+'''Oludenkeituden kompanii «Baltika»''' ([[Venäkel'|ven.]] ''Пивоваренная компания «Балтика»'') om kaikiš suremb [[Venäma|venälaine]] [[olud|oludenkeituden]] kompanii. Štab-kvartir om [[Piter]]iš.
 
 == Irdkosketused ==
 * [http://www.baltika.ru/ Oficialine sait]
