--- a/Baltika_(oludenkeituden_kompanii).mw
+++ b/Baltika_(oludenkeituden_kompanii).mw
@@ -1,4 +1,4 @@
-[[Fail:Baltika Barry Kent.jpg|thumb|right|275px|«Baltik»-kompanijan produkcii laukas]]
+[[Fail:Baltika Barry Kent.jpg|thumb|right|275px|«Baltika»-kompanijan produkcii laukas]]
 '''Oludenkeituden kompanii «Baltika»''' ([[Venäkel'|ven.]] ''Пивоваренная компания «Балтика»'') om kaikiš suremb [[Venäma|venälaine]] [[olud|oludenkeituden]] kompanii. Štab-kvartir om [[Piter]]iš.
 
 == Irdkosketused ==
