--- a/Viipurin_rajon_(Piter).mw
+++ b/Viipurin_rajon_(Piter).mw
@@ -1,5 +1,5 @@
 [[Fail:Spb vyborgsky.svg|thumb|right|250px|Viborgan rajon Piterin kartal]]
-'''Viborgan rajon''' ([[Venäkel'|ven.]] ''Выборгский район'') om rajon [[Piter]]iš, sijadase lidnan pohjoižes palas.
+'''Viborgan (Viipurin) rajon''' ([[Venäkel'|ven.]] ''Выборгский район'') om rajon [[Piter]]iš, sijadase lidnan pohjoižes palas.
 
 * Pind — 115,38 km²
 * Eläjiden lugu — 447 562 rist. (2010)
