*Empty MediaWiki Message*

--- a/Kontinent.mw
+++ b/Kontinent.mw
@@ -1,10 +1,8 @@
 {{1000}}
 [[Fail:ContinentStatistics.svg|right|450px]]
-'''Kontinent''' om sur' [[mankor'|mankoren]] massiv, kudamban znamasine päpala sijadase ülemba [[Mail'manvaldmeri|Mail'manvaldmeren]] (kuivuz), a toine periferine pala om alemba sid. Lähembaižed [[sar'|sared]] vedenalaižen periferijas mülüb kontinentha mugažo.
+'''Kontinent''' om sur' [[mankor'|mankoren]] massiv, kudamban znamasine päpala sijadase ülemba [[Mail'manvaldmeri|Mail'manvaldmeren]] (kuivuz), a toine periferine pala om alemba sid. Lähembaižed [[sar'|sared]] vedenalaižes periferijas mülüb kontinentha mugažo.
 
 Päiči siš, kävutase «'''materik'''»-termin.
 {{stub}}
 
 [[Kategorii:Kontinentad|*]]
-
-[[ru:Континент]]
