--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -154,3 +154,5 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jäiba min
 | «[[I Like Chopin]]» (1983)
 |-
 |}
+
+[[Kategorii:Edestajiden nimikirjutesed]]
