*Empty MediaWiki Message*

--- a/Evrazii.mw
+++ b/Evrazii.mw
@@ -1,6 +1,6 @@
 [[Fail:LocationEurasia.png|thumb|Evrazii]]
 [[Fail:Eurasia (orthographic projection).svg|thumb|Evrazii]]
-'''Evrazii''' om kontinent. Pind — 53,9 millionad km², Eläjiden lugu — 4 800 mil.
+'''Evrazii''' om [[kontinent]]. Pind — 53,9 millionad km², Eläjiden lugu — 4 800 mil.
 
 {{Kontinentad}}
 {{stub}}
