*Empty MediaWiki Message*

--- a/Kontinent.mw
+++ b/Kontinent.mw
@@ -3,6 +3,21 @@
 '''Kontinent''' om sur' [[mankor'|mankoren]] massiv, kudamban znamasine päpala sijadase ülemba [[Mail'manvaldmeri|Mail'manvaldmeren]] (kuivuz), a toine periferine pala om alemba sid. Lähembaižed [[sar'|sared]] vedenalaižes periferijas mülüb kontinentha mugažo.
 
 Päiči siš, kävutase «'''materik'''»-termin.
+
+Nügüdläižed kontinentad:
+* [[Afrik]]
+* [[Antarktid]]
+* [[Azii]]
+* [[Avstralii (kontinent)|Avstralii]]
+* [[Evrop]]
+* [[Pohjoižamerik]]
+* [[Suviamerik]]
+
+Mail'man palad da [[superkontinent]]ad:
+* [[Afroevrazii]] (Afrik + Evrop + Azii)
+* [[Amerik]] (Pohjoižamerik + Suviamerik)
+* [[Evrazii]] (Evrop + Azii)
+* [[Valdmerimad]] (Avstralii + äilugu susedsarid)
 {{stub}}
 
 [[Kategorii:Kontinentad|*]]
