--- a/Pandemii.mw
+++ b/Pandemii.mw
@@ -1,8 +1,8 @@
 {{1000}}
 [[Fail:Cholera Art 1866.JPG|thumb|right|250px|[[Holer]], tundmatoman pirdajan pirdandkuva (1866)]]
-'''Pandemii''' ([[grekan kel'|grek.]]: ''πανδημία'' — ''kaiken rahvaz'') om [[epidemii]], kudamb levigandeb kaiken valdkundan territorijadme, a erasišti susedvaldkundoidme i äjidme mail'man regionoidme.
+'''Pandemii''' ([[grekan kel'|grek.]]: ''πανδημία'' — ''kaik rahvaz'') om [[epidemii]], kudamb levigandeb kaiken valdkundan territorijadme, a erasišti susedvaldkundoidme i äjidme mail'man regionoidme.
 
-Ozutesed — [[holer]]an, [[gripp]]an, [[paharubi|paharuben]] epidemijad. Millionad ristituid linnas niiden žertvoikš.
+Ozutesed — [[holer]]an, [[gripp]]an, [[paharubi|paharuben]] epidemijad. Millionad ristituid lindas niiden žertvoikš.
 {{stub}}
 
 [[Kategorii:Epidemiologii]]
