--- a/Kontinent.mw
+++ b/Kontinent.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:ContinentStatistics.svg|right|450px]]
-'''Kontinent''' om sur' [[mankor'|mankoren]] massiv, kudamban znamasine päpala sijadase ülemba [[Mail'manvaldmeri|Mail'manvaldmeren]] (kuivuz), a toine periferine pala om alemba sid. Lähembaižed [[sar'|sared]] vedenalaižes periferijas mülüb kontinentha mugažo.
+'''Kontinent''' om sur' [[mankor'|mankoren]] massiv, kudamban znamasine päpala sijadase ülemba [[Mail'manvaldmeri|Mail'manvaldmert]] (kuivuz), a toine periferine pala om alemba sidä. Lähembaižed [[sar'|sared]] vedenalaižes periferijas mülüdas kontinentha mugažo.
 
 Päiči siš, kävutase «'''materik'''»-termin.
 
