*Empty MediaWiki Message*

--- a/Süväjärv.mw
+++ b/Süväjärv.mw
@@ -1,5 +1,5 @@
 [[Fail:SIV OZ.jpg|thumb|right|250px|Süväjärv]]
-'''Süväjärv''' ([[venäkel'|ven.]]: ''Сиверское озеро'') om pen' järv [[Venäma]]n [[Vologdan agj]]an [[Kirillovan rajon]]as. Lodehližen palan sijadase [[Kirillov]]-lidn. Om «[[Venälaine Pohjoine]]»-londuseližen puišton territorijan südäimes.
+'''Süväjärv''' ([[venäkel'|ven.]]: ''Сиверское озеро'') om pen' järv [[Venäma]]n [[Vologdan agj]]an [[Kirillovan rajon]]as. Lodehližes palas sijadase [[Kirillov]]-lidn. Om «[[Venälaine Pohjoine]]»-londuseližen puišton territorijan südäimes.
 
 Pind om läz 7,5 km². Makssüvüz om läz 26 metrad. Vaiše üks' jogi, [[Svijag (Kirillovan rajon)|Svijag]], lankteb sihe järvhe.
 {{stub}}
