если "оставили след"

--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -1,6 +1,6 @@
 Se om '''znamasižiden [[evrodisko]]pajatajiden nimikirjutez'''. Täs om edestajad (pajatad vai muzikgruppad), kudamboil oli sur' populärižuz vaiše vai tobjimalaz 80-žiš voziš.
 
-Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jäiba minimaline jäl'g [[disko]]muzikas, ei mülügoi nimikirjuteshe.
+Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba minimaližen jäl'gen [[disko]]muzikha, ei mülügoi nimikirjuteshe.
 
 == A ==
 {| class="sortable wikitable"
