*Empty MediaWiki Message*

--- a/Avstralii_(kontinent).mw
+++ b/Avstralii_(kontinent).mw
@@ -1,8 +1,8 @@
 [[Fail:Australia satellite plane.jpg|thumb|320px|Avstralii]]
 {{tärtused|Avstralii}}
-'''Avstralii''' om [[kontinent]]. Pind — 7,7 millionad km², Eläjiden lugu — 22,6 mln.
+'''Australia''' om [[kontinent]]. Pind — 7,7 millionad km², Eläjiden lugu — 22,6 mln.
 
-Nece kontinent om üksjäine, kudambal om vaiše üks' valdkund - [[Avstralii (valdkund)|Avstralii]].
+Nece kontinent om üksjäine, kudambal om vaiše üks' valdkund - [[Avstralii (valdkund)|Australia]].
 
 {{Kontinentad}}
 {{stub}}
