*Empty MediaWiki Message*

--- a/Gillard_Džulija.mw
+++ b/Gillard_Džulija.mw
@@ -1,5 +1,5 @@
 [[Fail:Julia Gillard 22August 2011.jpg|thumb|right|250px|Džulija Gillard]]
-'''Džulija Eilin Gillard''' ([[anglijan kel'|angl.]]: ''Julia Eileen Gillard''; sünd. [[29. sügüz'ku]] [[1961]], [[Barri (Vel's)]], [[Sur' Britanii]]) om 27. da nügüdläine [[Avstralii (valdkund)|Avstralijan]] päministr.
+'''Julia Eileen Gillard''' ([[anglijan kel'|angl.]]: ''Julia Eileen Gillard''; sünd. [[29. sügüz'ku]] [[1961]], [[Barri (Vel's)]], [[Sur' Britanii]]) om 27. da nügüdläine [[Avstralii (valdkund)|Australian]] päministr.
 {{stub}}
 
 [[Kategorii:Avstralii (valdkund)]]
