--- a/Bosnii_da_Gercegovin.mw
+++ b/Bosnii_da_Gercegovin.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Bosna i Hercegovina'''<br />'''Босна и Херцеговина'''<br />'''Bosnii da Gercegovin'''</big></big>
+|+<big><big>'''Bosna i Hercegovina'''<br />'''Босна и Херцеговина'''<br />'''Bosnia -ja Hertsegovina'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:Europe-Bosnia and Herzegovina.svg|300px]]
 |}
-'''Bosnii da Gercegovin''' (bosn.: ''Bosna i Hercegovina'') om valdkund [[Evropa]]s. Pälidn om [[Sarajevo]].
+'''Bosnia -ja Hertsegovina''' (bosn.: ''Bosna i Hercegovina'') om valdkund [[Evropa]]s. Pälidn om [[Sarajevo]].
 
 Eläjiden lugu — 4,6 mil.</br>
 Pind — 51 129 km<sup>2</sup>.
