--- a/Valdmerimad.mw
+++ b/Valdmerimad.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:LocationOceania.png|pisi|300px|Valdmerimad]]
-'''Valdmerimad''' (vai '''Oceania''') om region [[Ma]]s. Pind — 8,52 millionad km², Eläjiden lugu — 32,6 mil.
+'''Valdmerimad''' (vai '''Okeanii''') om region [[Ma]]s. Pind — 8,52 millionad km², Eläjiden lugu — 32,6 mil.
 {{Kontinentad}}
 
 {{stub}}
