Tühistati muudatus 52336, mille tegi [[Special:Contributions/78.37.232.172|78.37.232.172]] ([[User talk:78.37.232.172|arutelu]])

--- a/Evrop.mw
+++ b/Evrop.mw
@@ -1,13 +1,13 @@
 {{1000}}
 [[Fail:Europe satellite globe.jpg|thumb|250px|Evrop kosmosaspäi]]
-'''Europa''' ([[grekan kel'|grekan kelel]]: ''Ευρώπη'') om kontinent da üks' kudes [[Ma]]n kuiviš paloišpäi Pohjoižel Manpoliškol. Pind om 10 millionad km². Eläjiden lugu om 830,4 millionad ristitud. Evropan sijaduz om [[Atlantine valdmeri|Atlantižen]] da [[Jävaldmeri]]den randal. Sen sariden pind om läz 730 000 km². Kaikiš suremb sar' om [[Sur' Britanii]]. 
+'''Evrop''' ([[grekan kel'|grekan kelel]]: ''Ευρώπη'') om kontinent da üks' kudes [[Ma]]n kuiviš paloišpäi Pohjoižel Manpoliškol. Pind om 10 millionad km². Eläjiden lugu om 830,4 millionad ristitud. Evropan sijaduz om [[Atlantine valdmeri|Atlantižen]] da [[Jävaldmeri]]den randal. Sen sariden pind om läz 730 000 km². Kaikiš suremb sar' om [[Sur' Britanii]]. 
 
 Järedad järved oma [[Ladog]], [[Änine]], [[Peipus]], [[Venern]], [[Balaton]] da [[Ženevan järv]].
 
 == Irdkosketused ==
-* [http://www.euratlas.com/ Euroatlas] (anglijan kelel)
-* [http://home.versatel.nl/gerardvonhebel Europan historine atlas] (anglijan kelel)
-* [http://www.euromag.ru/ Kaik Europan polhe]
+* [http://www.euratlas.com/ Evroatlas] (anglijan kelel)
+* [http://home.versatel.nl/gerardvonhebel Evropan istorine atlas] (anglijan kelel)
+* [http://www.euromag.ru/ Kaik Evropan polhe]
 * [http://www.evropa.org.ua/ Evropan valdkundad: informacine portal]
 
 {{Kontinentad}}
