Tühistati muudatus 52338, mille tegi [[Special:Contributions/78.37.232.172|78.37.232.172]] ([[User talk:78.37.232.172|arutelu]])

--- a/Romanii.mw
+++ b/Romanii.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''România'''<br />'''Romania'''</big></big>
+|+<big><big>'''România'''<br />'''Romanii'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Romania.svg|300px]]
 |}
-'''Romania''' (rom.: ''România'') — valdkund [[Evropa|Europa]]s. [[EÜ]]n ühtnii.
+'''Romanii''' (rom.: ''România'') — valdkund [[Evropa]]s. [[EÜ]]n ühtnii.
 
 Eläjiden lugu — 21,5 mln.</br>
 Pind — 237 500 km<sup>2</sup>.
