Tühistati muudatus 52339, mille tegi [[Special:Contributions/78.37.232.172|78.37.232.172]] ([[User talk:78.37.232.172|arutelu]])

--- a/Bel'gii.mw
+++ b/Bel'gii.mw
@@ -1,17 +1,17 @@
 {{Valdkund
-| Nimi = Belgia<br />België<br />Belgique<br />Belgien
+| Nimi = Bel'gii<br />België<br />Belgique<br />Belgien
 | Flag = Flag of Belgium.svg
 | Valdkundznam = Coats of arms of Belgium Government.svg
 | Valdkundznam text = Bel'gijan valdkundznam
 | Flag text = Bel'gijan flag
-| Pälidn = Bruxelles
+| Pälidn = Brüssel'
 | Eläjiden lugu = 10 444 268
 | Voz' = 2013
 | Pind = 30 528
 | Kart = EU-Belgium.svg
 | Kel' = [[alaman kel'|alaman]], [[francijan kel'|francijan]], [[saksan kel'|saksan]]
-| Valdkundan pämez' = [[Albert II]]
-| Päministr = [[Eliotte di Rupeau]]
+| Valdkundan pämez' = [[Al'bert II]]
+| Päministr = [[Di Rupo Eliot|Eliot di Rupo]]
 | Religii = [[ateizm]], [[hristanuskond]]
 | Valüt = [[evro]]
 | Internet-domen = [[.be]]
