Tühistati muudatus 52340, mille tegi [[Special:Contributions/78.37.232.172|78.37.232.172]] ([[User talk:78.37.232.172|arutelu]])

--- a/Italii.mw
+++ b/Italii.mw
@@ -1,6 +1,6 @@
 {{1000}}
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Repubblica Italiana'''<br />'''Italian Tazovaldkund'''</big></big>
+|+<big><big>'''Repubblica Italiana'''<br />'''Italijan Tazovaldkund'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -14,7 +14,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Italy.svg|300px]]
 |}
-'''Italia''' ([[Italijan kel'|italijan kelel]]: ''Italia'') — valdkund [[Evrop]]as, Adriatikan, Tirrenan, Ionan da Keskmeren merid randal. [[EÜ]]n ühtnii. Italijan oma mavaldkundröunad [[Francii|Francijanke]], [[Šveicarii|Šveicarijanke]], [[Avstrii|Avstrijanke]], [[Slovenii|Slovenijanke]], [[San-Marino]]nke da [[Vatikan]]anke.
+'''Italii''' ([[Italijan kel'|italijan kelel]]: ''Italia'') — valdkund [[Evrop]]as, Adriatikan, Tirrenan, Ionan da Keskmeren merid randal. [[EÜ]]n ühtnii. Italijan oma mavaldkundröunad [[Francii|Francijanke]], [[Šveicarii|Šveicarijanke]], [[Avstrii|Avstrijanke]], [[Slovenii|Slovenijanke]], [[San-Marino]]nke da [[Vatikan]]anke.
 
 Pälidn — [[Rim]].</br>
 Eläjiden lugu — 60,1 mil.</br>
