--- a/Lavin_Avril.mw
+++ b/Lavin_Avril.mw
@@ -1,4 +1,4 @@
-[[Fail:Avril Lavigne playing guitar, Italy (crop).jpg|thumb|right|250px|Avril Lavin [[Rim]]as, 2011]]
+[[Fail:Avril Lavigne, Today Show, 2013.jpg|thumb|right|250px|Avril Lavin, 2013]]
 '''Avril Ramona Lavin''' ([[anglijan kel'|angl.]]: ''Avril Ramona Lavigne''; sünd. [[27. sügüz'ku]] [[1984]], [[Bel'vil']], [[Kanad]]) om populärine [[Kanad|kanadalaine]] pajatai.<ref>http://www.allmusic.com/artist/avril-lavigne-mn0000762885</ref>
 
 == Al'bomad ==
