*Empty MediaWiki Message*

--- a/Abhazii.mw
+++ b/Abhazii.mw
@@ -1,5 +1,5 @@
 {{Valdkund
-| Nimi = Abhazii<br />Аҧсны Аҳәынҭқарра<br />Республика Абхазия
+| Nimi = Abhazijan Tazobaldkund<br />Аҧсны Аҳәынҭқарра<br />Республика Абхазия
 | Valdkundznam = Coat of arms of Abkhazia.svg
 | Flag = Flag of Abkhazia.png
 | Valdkundznam text = Abhazijan valdkundznam
