--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -47,7 +47,7 @@ Pajon geroi — nor' mez', kudamban südäin palab himospäi i armastusespäi ar
 {|class="toptextcells"
 |
 * 1985: [[Roos Mari|Mari Roos]] („Ich bin stark nur mit dir“-nimen al)
-* 1985: Creative Connection
+* 1985: [[Lian Ross|Creative Connection]]
 * 1985: Milchshake („Nur mit Quark wird man stark“-nimen al)
 * 1985: Aleksa Lekler („Avec toi, contre toi“-nimen al)
 * 1985: Riku („Ota kii“-nimen al)
