The previous one was better.

--- a/Horvatii.mw
+++ b/Horvatii.mw
@@ -11,7 +11,7 @@
 | align="center" width="140px" | 
 |}
 |-
-| align=center colspan=2 | [[Fail:EU-Croatia.svg|300px]]
+| align=center colspan=2 | [[Fail:Europe-Croatia.svg|300px]]
 |}
 '''Horvatii''' ([[Horvatan kel'|horvatan kelel]]: ''Republika Hrvatska'') — valdkund [[Evropa]]s.
 
@@ -28,7 +28,7 @@ Pind — 56 594 km<sup>2</sup>.
 
 == Ižanduz ==
 
-{{Evropa}}
+{{Evrop}}
 {{stub}}
 
-[[Kategorii:Horvatii]]
+[[Kategorii:Horvatii|*]]
