--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -155,4 +155,32 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 |-
 |}
 
+== H ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Din Heizel|Heizel Din]]
+| {{GBR}}
+| 1975—...
+| «[[Whatever I Do (Wherever I Go)]]» (1984), «[[Who's Leaving Who]]» (1986)
+|-
+|}
+
+== I ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Imagination]]
+| {{GBR}}
+| 1981—1992
+| «[[Just an Illusion]]» (1982)
+|-
+|}
+
 [[Kategorii:Edestajiden nimikirjutesed]]
