--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -183,4 +183,32 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 |-
 |}
 
+== J ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Joy]]
+| {{AUT}}
+| 1985—...
+| «Touch by Touch» (1986), «Valerie» (1986)
+|-
+|}
+
+== Ž ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Mas Žanna|Žanna Mas]]
+| {{FRA}}
+| 1978—...
+| «[[Johnny, Johnny]]» (1985), «[[En rouge et noir]]» (1986)
+|-
+|}
+
 [[Kategorii:Edestajiden nimikirjutesed]]
