--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -83,7 +83,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 |-
 | [[Danuta Lato]]
 | {{POL}}
-| 1987—1989/1997
+| 1983/1987—1989/1997
 | «Touch My Heart» (1987)
 |-
 | [[Dead or Alive (grupp)|Dead or Alive]]
@@ -194,6 +194,30 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | {{AUT}}
 | 1985—...
 | «Touch by Touch» (1986), «Valerie» (1986)
+|-
+|}
+
+== K ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Ken Laslo]]
+| {{ITA}}
+| 1984—...
+| «[[Hey Hey Guy]]» (1984), «[[Tonight]]» (1985), «[[Don't Cry]]» (1986)
+|-
+| [[Kim Uaild]]
+| {{GBR}}
+| 1980—...
+| «[[Kids in America]]» (1981)
+|-
+| [[Koto (grupp)|Koto]]
+| {{ITA}}
+| 1982—1993, 2001—...
+| «[[Visitors]]» (1985)
 |-
 |}
 
